--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "Testing nodejs",
   "main": "app.js",
   "scripts": {
-    "test": "node app.js"
+    "test": "nodemon app.js"
   },
   "author": "Jahed",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "colors": "^1.4.0",
+    "express": "^4.18.2"
+  }
 }
